# usePlatoAI

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  audioActivation.ts  avatarSurface.tsx  controlSurface.ts  experienceTokens.ts  main.tsx  memory.ts  presenceState.ts  (+7 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  local_data.rs  main.rs  presence_window.rs  provider_credentials.rs  secret_store.rs  soul.rs
docs/agents/: afk-workflow.md  domain.md  issue-tracker.md  milestones.md  pr-review-runner.md  ralph-loop.md  ralph-runner.md  triage-labels.md
docs/architecture/: baseline.md  experience-tokens.md  live2d-avatar-surface.md  product-experience-direction.md
docs/milestones/: 001-desktop-shell-and-first-run.md  002-local-data-and-trust-foundation.md  003-voice-and-live2d-presence-loop.md  004-memory-and-soul-control.md  005-experience-direction-and-companion-redesign.md  005-task-tray-and-parallel-work.md  006-provider-and-agent-engine-harness.md  006-task-tray-and-parallel-work.md  007-capabilities-skills-and-browser-automation.md  007-provider-and-agent-engine-harness.md  008-capabilities-skills-and-browser-automation.md
docs/prd/: 001-useplatoai-desktop-companion.md
docs/visual-evidence/: milestone-005-checklist.md
ralph/: afk.sh  once.sh  prompt.md
review/: pr.sh  prompt.md
scripts/: afk-workflow  ralph-loop  review-pr  test-afk-workflow
(+4 files in other folders)
