[package]
name = "useplatoai-desktop"
version = "0.0.0"
description = "usePlatoAI desktop shell"
authors = ["usePlatoAI contributors"]
edition = "2021"

[lib]
name = "useplatoai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
