[package]
name = "useplatoai-desktop"
version = "0.0.0"
description = "usePlatoAI desktop shell"
authors = ["usePlatoAI contributors"]
edition = "2021"

[lib]
name = "useplatoai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
keyring-core = "1.0.0"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
uuid = { version = "1", features = ["v4"] }
